k8s/v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalogue-v1
  labels:
    app: product-catalogue-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-catalogue-v1
  template:
    metadata:
      labels:
        app: product-catalogue-v1
    spec:
      containers:
        - name: product-catalogue
          image: product-catalogue:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 9191
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
