k8s/v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue-v1-service
spec:
  selector:
    app: product-catalogue-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9191
  type: ClusterIP
