k8s/v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-catalogue-v2-service
  namespace: v2
spec:
  selector:
    app: product-catalogue-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9191
  type: ClusterIP
