k8s/v1-1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-catalogue-v1-1-ingress
  namespace: v1-1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /v1.1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-catalogue-v1-1-service
                port:
                  number: 80
